updating server & testing data
